# CD-lab

./: .gitignore  CMakeLists.txt  README.md
build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mingw/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: design.md  flang_ir_notes.md  limitations.md
examples/: allocatable_reassignment.f90  array_expression_temporary.f90  array_section_copy_in_out.f90  array_valued_function_result.f90  benchmark_allocatable_realloc.f90  benchmark_array_temp.f90  benchmark_function_result.f90  simple_array_expr.f90  transformed_simple_array_expr.f90
include/FAP/: AllocationClassifier.h  AllocationInfo.h  AllocationKind.h  AllocationRecord.h  AnalysisDriver.h  Report.h
report/: evaluation_results.json  evaluation_results.md  final_report.md  outline.md
scripts/: generate_hlfir.ps1  generate_hlfir.sh  malloc_counter.c  run_evaluation.py  serve_ui.py  transform_fortran.py
src/: AllocationClassifier.cpp  AllocationRecord.cpp  AnalysisDriver.cpp  Report.cpp  main.cpp
tests/: CMakeLists.txt  README.md  allocatable_reassignment.mlir  array_expression_temporary.mlir  array_section_copy.mlir  function_result_temporary.mlir  simple_alloc.mlir
ui/: app.js  index.html  styles.css
